# backend/swagger.yaml
@@ -1134,7 +1134,39 @@ paths:
             application/json:
               schema:
                 $ref: "#/definitions/Error"
-
+  /api/like-comment/{id}:
+    post:
+      summary: Toggle like of the specified comment
+      security:
+        - JwtAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        201:
+          description: Like was added to the comment
+        204:
+          description: Like was deleted from the comment
+        404:
+          description: Comment does not exist
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
+        403:
+          description: User is not subscribed to the profile
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
+        401:
+          description: User is unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/definitions/Error"
 
 
 definitions:
